added fetch based on ID

--- a/mta.yaml
+++ b/mta.yaml
@@ -74,9 +74,23 @@ modules:
       - nfaapproval.zip
       name: nfaapproval
       target-path: resources/
+    - artifacts:
+      - approval.zip
+      name: approval
+      target-path: resources/
 - name: nfaapproval
   type: html5
   path: app/nfa_approval
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+- name: approval
+  type: html5
+  path: app/approval
   build-parameters:
     build-result: dist
     builder: custom
@@ -135,7 +149,7 @@ resources:
 - name: cross-container-service-1
   type: org.cloudfoundry.existing-service
   parameters:
-    service-name: "main_db2-db"
+    service-name: main_db2-db
   properties:
     the-service-name: ${service-name}
 parameters:
