--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "^8",
-    "express": "^4",
     "@cap-js/hana": "^1",
     "@sap-cloud-sdk/http-client": "^3.23.0",
     "@sap-cloud-sdk/resilience": "^3.23.0",
+    "@sap/cds": "^8",
     "@sap/xssec": "^4.2.7",
+    "axios": "^1.7.9",
+    "express": "^4",
     "passport": "^0.7.0"
   },
   "devDependencies": {
